--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2024"
 [dependencies]
 axum = "0.8.4"
 tokio = { version = "1.45.1", features = ["rt-multi-thread", "net", "sync", "macros"] }
+bytes = "1.10.1"
+tokio-stream = { version = "0.1.17", features = ["sync"] }
+futures-util = "0.3.31"
